MDEV-26832: ROW_NUMBER in SIGNAL/RESIGNAL causes a syntax error

Analysis: Parser was missing ROW_NUMBER as syntax for SIGNAL and RESIGNAL.
Fix: Fix parser and fix how m_row_number is copied like other attributes
to avoid ROW_NUMBER from assuming default value.